# releases1c

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/releases1c/: __init__.py  __main__.py  downloader.py  error_codes.py  manuals.py  parsing.py  request1c.py  secrets.py  shell_commands.py
